# VeritNote

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vendor.7z  version.txt
Renderer/: common.js  translate.js
Renderer/cpp/: .gitignore  DomElement.cpp  DomElement.h  test.cpp
Renderer/translator/: check.js  cli.js  common.js  config.json  package-lock.json  package.json  tools.js  translate.js
TSClosure/: cli.js  cli.ts  generate_externs.js  generate_externs.ts  generate_jsdoc.js  transform_enum.js  tsconfig.json  type.js
android_project/app/: build.gradle.kts
android_project/app/src/androidTest/java/com/veritnet/veritnote/: ExampleInstrumentedTest.kt
android_project/app/src/main/: AndroidManifest.xml
android_project/app/src/main/java/com/veritnet/veritnote/: MainActivity.kt
android_project/app/src/main/res/values/: themes.xml
android_project/app/src/test/java/com/veritnet/veritnote/: ExampleUnitTest.kt
android_project/gradle/wrapper/: gradle-wrapper.properties
cmake/: CompileJSScripts.cmake  GenerateResources.cmake  JSClosureCompile.cmake  TSClosureCompile.cmake  UglifyScripts.cmake
src/: Backend.cpp  Backend.h  main.cpp
src/core/: Backend.cpp
src/include/: Backend.h  Platform.h
src/platform/android/: Android_Backend.cpp  Android_Backend.h  JNI_Bridge.cpp
src/platform/windows/: Win_Backend.cpp  Win_Backend.h  Win_Main.cpp
webview_ui/: GCC_Externs.js  dashboard.html  index.html  page-theme.css  welcome.veritnote
webview_ui/blocks/: Block.js  Block.ts  TextBlock.js  TextBlock.ts  tsconfig.json
webview_ui/blocks/callout/: CalloutBlock.js  CalloutBlock.ts  callout.css
webview_ui/blocks/code/: CodeBlock.js  CodeBlock.ts
webview_ui/blocks/columns/: ColumnBlock.js  ColumnBlock.ts  ColumnsBlock.js  ColumnsBlock.ts  columns.css
webview_ui/blocks/data/: DataBlock.js  DataBlock.ts  TableViewBlock.js  TableViewBlock.ts  table-view.css
webview_ui/blocks/heading/: Heading1Block.js  Heading1Block.ts  Heading2Block.js  Heading2Block.ts  heading.css
webview_ui/blocks/link-button/: LinkButtonBlock.js  LinkButtonBlock.ts  link-button.css
webview_ui/blocks/list-items/: BulletedListItemBlock.js  BulletedListItemBlock.ts  NumberedListItemBlock.js  NumberedListItemBlock.ts  TodoListItemBlock.js  TodoListItemBlock.ts  ToggleListItemBlock.js  ToggleListItemBlock.ts  list-item-shared.css
webview_ui/blocks/media/: AudioBlock.js  AudioBlock.ts  ImageBlock.js  ImageBlock.ts  VideoBlock.js  VideoBlock.ts  audio.css  image.css  video.css
webview_ui/blocks/paragraph/: ParagraphBlock.js  ParagraphBlock.ts
webview_ui/blocks/quote/: QuoteBlock.js  QuoteBlock.ts  quote.css
webview_ui/blocks/shared/: block-core.css
webview_ui/blocks/table/: TableBlock.js  TableBlock.ts  table.css
webview_ui/components/: editor.js  editor.ts  externs.d.ts  tsconfig.json  types.ts  version.js
webview_ui/components/blocks/: Block.js  ContainerBlock.js  DataBlock.js  TextBlock.js
webview_ui/components/blocks/_shared/: block-core.css
webview_ui/components/blocks/callout/: CalloutBlock.js  callout.css
webview_ui/components/blocks/code/: CodeBlock.js  code.css
webview_ui/components/blocks/columns/: ColumnBlock.js  ColumnsBlock.js  columns.css
webview_ui/components/blocks/data/: DataBlock.js  TableViewBlock.js  table-view.css
webview_ui/components/blocks/heading/: Heading1Block.js  Heading2Block.js  heading.css
webview_ui/components/blocks/image/: ImageBlock.js  image.css
webview_ui/components/blocks/link-button/: LinkButtonBlock.js  link-button.css
webview_ui/components/blocks/list-items/: BulletedListItemBlock.js  NumberedListItemBlock.js  TodoListItemBlock.js  ToggleListItemBlock.js  list-item-shared.css
webview_ui/components/blocks/media/: AudioBlock.js  ImageBlock.js  VideoBlock.js  audio.css  image.css  video.css
webview_ui/components/blocks/paragraph/: ParagraphBlock.js
webview_ui/components/blocks/quote/: QuoteBlock.js  quote.css
webview_ui/components/blocks/shared/: block-core.css
webview_ui/components/blocks/table/: TableBlock.js  table.css
webview_ui/components/blocks/table-view/: TableViewBlock.js  table-view.css
webview_ui/components/dashboard/: dashboard.css  dashboard.js  dashboard.ts
webview_ui/components/data-editor/: data-editor.css  data-editor.js
webview_ui/components/database-editor/: database-editor.css  database-editor.html  database-editor.js  database-editor.ts
webview_ui/components/graph-editor/: graph-editor.css  graph-editor.html  graph-editor.js
webview_ui/components/main/: ConfigModal.css  ConfigModal.js  ConfigModal.ts  default-config.js  default-config.ts  error.ts  export-manager.js  export-manager.ts  file-helper.ts  file.d.ts  global-state.js  global-state.ts  ipc.js  ipc.ts  main.css  main.html  main.js  main.ts  tab-manager.ts  theme.css
webview_ui/components/main/CP/: workspace-tree.ts
webview_ui/components/main/CP/ws-mng/: ws-mng.css  ws-mng.html  ws-mng.ts
webview_ui/components/page-editor/: HistoryManager.js  HistoryManager.ts  ReferenceManager.js  ReferenceManager.ts  SelectionManager.js  SelectionManager.ts  page-editor.css  page-editor.html  page-editor.js  page-editor.ts  popovers.js  popovers.ts
webview_ui/components/ui-lib/: readme.md  theme.css  ui-lib.css  ui-lib.js  ui-lib.ts
webview_ui/components/ui-lib/tools/: kv-form-h.d.ts  kv-form.css  kv-form.js  kv-form.ts
webview_ui/css/: code-block.css  dashboard.css  style.css
webview_ui/js/: HistoryManager.js  dashboard.js  editor.js  ipc.js  main.js
webview_ui/js/blocks/: Block.js  CalloutBlock.js  CodeBlock.js  ColumnBlock.js  ColumnsBlock.js  Heading2Block.js  ImageBlock.js  LinkButtonBlock.js  NumberedListItemBlock.js  QuoteBlock.js  TextBlock.js  TodoListItemBlock.js  ToggleListItemBlock.js
